Shrink tables for phone via table.css media query

--- a/css/bio_content.css
+++ b/css/bio_content.css
@@ -1,10 +1,9 @@
 .content_container {
   overflow: auto;
   word-break: normal;
-  word-break: break-all;
+  word-break: keep-all;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  font-family: 'Michroma', sans-serif;
 }
